[gd_scene load_steps=23 format=3 uid="uid://be1133xfpyrwl"]

[ext_resource type="Script" path="res://Scripts/Order/ticket.gd" id="1_h3l7e"]
[ext_resource type="Texture2D" uid="uid://7k5ruvlr3q8j" path="res://Assets2D/orderAssets/Longer_Ticket_1.PNG" id="2_41k16"]
[ext_resource type="Texture2D" uid="uid://bdonrxn7l8dki" path="res://Assets2D/orderAssets/Longer_Ticket_2.PNG" id="3_oq33j"]
[ext_resource type="Texture2D" uid="uid://c5f0ebi8hkhhf" path="res://Assets2D/orderAssets/bottomBun.PNG" id="3_plggq"]
[ext_resource type="Texture2D" uid="uid://bkhnoet2ytbr6" path="res://Assets2D/orderAssets/beefPatty.PNG" id="4_j5obd"]
[ext_resource type="Texture2D" uid="uid://drl6dfyrvytty" path="res://Assets2D/orderAssets/Longer_Ticket_3.PNG" id="4_v8gub"]
[ext_resource type="Texture2D" uid="uid://cobx7mye58sqy" path="res://Assets2D/orderAssets/chickenPatty.PNG" id="5_iudfa"]
[ext_resource type="Texture2D" uid="uid://b2ncx2mqbe1ja" path="res://Assets2D/orderAssets/Meter_Trashest_Customer.PNG" id="5_rtjt8"]
[ext_resource type="Texture2D" uid="uid://7m7w2l67nv7q" path="res://Assets2D/orderAssets/Meter_MidTrash_Customer.PNG" id="6_i01c8"]
[ext_resource type="Texture2D" uid="uid://dalh871vc2kx2" path="res://Assets2D/orderAssets/lettuce.PNG" id="6_rdei6"]
[ext_resource type="Texture2D" uid="uid://bfu0evv387jr0" path="res://Assets2D/orderAssets/tomato.PNG" id="7_l3kgl"]
[ext_resource type="Texture2D" uid="uid://cj5n73j7epr8j" path="res://Assets2D/orderAssets/Meter_Mid_Customer.PNG" id="7_op1n7"]
[ext_resource type="Texture2D" uid="uid://ciab1ppcwrq4o" path="res://Assets2D/orderAssets/pickle.PNG" id="8_0xwad"]
[ext_resource type="Texture2D" uid="uid://b4qhoc334i3gn" path="res://Assets2D/orderAssets/Meter_MidFresh_Customer.PNG" id="8_7miwx"]
[ext_resource type="Texture2D" uid="uid://b83876kf7uj3u" path="res://Assets2D/orderAssets/onion.PNG" id="9_whpl8"]
[ext_resource type="Texture2D" uid="uid://cpq4coy0j08dn" path="res://Assets2D/orderAssets/Meter_Freshest_Customer.PNG" id="9_xkmn3"]
[ext_resource type="Texture2D" uid="uid://cjrvfxuwroyx" path="res://Assets2D/orderAssets/cheese.PNG" id="10_gmk3e"]
[ext_resource type="Texture2D" uid="uid://cs7wv76va0phf" path="res://Assets2D/orderAssets/topBun.PNG" id="11_x4xhx"]
[ext_resource type="Texture2D" uid="uid://p4sdqqcprcoc" path="res://Assets2D/orderAssets/fries.PNG" id="12_22yms"]
[ext_resource type="Texture2D" uid="uid://cxiyqmm7nb3wr" path="res://Assets2D/orderAssets/drink.PNG" id="13_jlond"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dk3to"]
size = Vector2(29, 111.333)

[sub_resource type="SphereMesh" id="SphereMesh_b4ltv"]

[node name="ticket" type="Area2D" groups=["ticket"]]
position = Vector2(0, 42)
scale = Vector2(3, 3)
script = ExtResource("1_h3l7e")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-0.166667, 44)
shape = SubResource("RectangleShape2D_dk3to")

[node name="tickets" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -44.0
offset_top = -22.0
offset_right = -4.0
offset_bottom = 18.0
metadata/_edit_use_anchors_ = true

[node name="ticket" type="TextureRect" parent="tickets"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0666668
anchor_bottom = -0.0666668
offset_right = 90.0
offset_bottom = 137.0
texture = ExtResource("2_41k16")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ticket2" type="TextureRect" parent="tickets"]
visible = false
layout_mode = 0
offset_right = 90.0
offset_bottom = 137.0
texture = ExtResource("3_oq33j")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ticket3" type="TextureRect" parent="tickets"]
visible = false
layout_mode = 0
offset_right = 90.0
offset_bottom = 137.0
texture = ExtResource("4_v8gub")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="pickyness" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -24.0
offset_top = 96.0
offset_right = 25.0
offset_bottom = 110.0

[node name="low" type="TextureRect" parent="pickyness"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = -0.117647
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_rtjt8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="midLow" type="TextureRect" parent="pickyness"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = -0.117647
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_i01c8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="mid" type="TextureRect" parent="pickyness"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = -0.117647
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_op1n7")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="midHigh" type="TextureRect" parent="pickyness"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = -0.117647
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_7miwx")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="high" type="TextureRect" parent="pickyness"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = -0.117647
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_xkmn3")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="ticketItems" type="TextureRect" parent="."]
offset_left = -44.0
offset_top = -22.0
offset_right = 46.0
offset_bottom = 115.0
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Item1" type="Control" parent="ticketItems"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.774939
anchor_right = 0.793333
anchor_bottom = 0.885627
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="BottomBun" type="TextureRect" parent="ticketItems/Item1"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_plggq")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Item2" type="Control" parent="ticketItems"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.692215
anchor_right = 0.793333
anchor_bottom = 0.802902
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="beefPatty" type="TextureRect" parent="ticketItems/Item2"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_j5obd")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="chickenPatty" type="TextureRect" parent="ticketItems/Item2"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_iudfa")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Item3" type="Control" parent="ticketItems"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.596107
anchor_right = 0.793333
anchor_bottom = 0.706794
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="lettuce" type="TextureRect" parent="ticketItems/Item3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_rdei6")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="tomato" type="TextureRect" parent="ticketItems/Item3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_l3kgl")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="pickle" type="TextureRect" parent="ticketItems/Item3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_0xwad")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="onion" type="TextureRect" parent="ticketItems/Item3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_whpl8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="cheese" type="TextureRect" parent="ticketItems/Item3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_gmk3e")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="topBun" type="TextureRect" parent="ticketItems/Item3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_x4xhx")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Item4" type="Control" parent="ticketItems"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.512165
anchor_right = 0.793333
anchor_bottom = 0.622852
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="lettuce" type="TextureRect" parent="ticketItems/Item4"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_rdei6")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="tomato" type="TextureRect" parent="ticketItems/Item4"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_l3kgl")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="pickle" type="TextureRect" parent="ticketItems/Item4"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_0xwad")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="onion" type="TextureRect" parent="ticketItems/Item4"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_whpl8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="cheese" type="TextureRect" parent="ticketItems/Item4"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_gmk3e")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="topBun" type="TextureRect" parent="ticketItems/Item4"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_x4xhx")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Item5" type="Control" parent="ticketItems"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.427007
anchor_right = 0.793333
anchor_bottom = 0.537695
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="lettuce" type="TextureRect" parent="ticketItems/Item5"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_rdei6")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="tomato" type="TextureRect" parent="ticketItems/Item5"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_l3kgl")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="pickle" type="TextureRect" parent="ticketItems/Item5"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_0xwad")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="onion" type="TextureRect" parent="ticketItems/Item5"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_whpl8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="cheese" type="TextureRect" parent="ticketItems/Item5"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_gmk3e")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="topBun" type="TextureRect" parent="ticketItems/Item5"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_x4xhx")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Item6" type="Control" parent="ticketItems"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.346715
anchor_right = 0.793333
anchor_bottom = 0.457402
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="lettuce" type="TextureRect" parent="ticketItems/Item6"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_rdei6")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="tomato" type="TextureRect" parent="ticketItems/Item6"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_l3kgl")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="pickle" type="TextureRect" parent="ticketItems/Item6"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_0xwad")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="onion" type="TextureRect" parent="ticketItems/Item6"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_whpl8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="cheese" type="TextureRect" parent="ticketItems/Item6"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_gmk3e")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="topBun" type="TextureRect" parent="ticketItems/Item6"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_x4xhx")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Item7" type="Control" parent="ticketItems"]
layout_mode = 1
anchor_left = 0.2
anchor_top = 0.26034
anchor_right = 0.793333
anchor_bottom = 0.371027
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="lettuce" type="TextureRect" parent="ticketItems/Item7"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("6_rdei6")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="tomato" type="TextureRect" parent="ticketItems/Item7"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_l3kgl")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="pickle" type="TextureRect" parent="ticketItems/Item7"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_0xwad")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="onion" type="TextureRect" parent="ticketItems/Item7"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("9_whpl8")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="cheese" type="TextureRect" parent="ticketItems/Item7"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("10_gmk3e")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="topBun" type="TextureRect" parent="ticketItems/Item7"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.213483
anchor_top = -0.137931
anchor_right = 0.786517
anchor_bottom = 1.03448
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("11_x4xhx")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="fries" type="TextureRect" parent="ticketItems"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.121654
anchor_right = 0.466667
anchor_bottom = 0.289538
texture = ExtResource("12_22yms")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="drink" type="TextureRect" parent="ticketItems"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.548148
anchor_top = 0.0997567
anchor_right = 0.77037
anchor_bottom = 0.274939
texture = ExtResource("13_jlond")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="ticketItems"]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
position = Vector2(44, 14.6667)
scale = Vector2(5.58522, 5.58522)
mesh = SubResource("SphereMesh_b4ltv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
